--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="navbar">
             <div class="text-left">
                 <img src="./assets/images/MindFi-Logo.png" height="50px">
@@ -28,7 +28,42 @@
                 <a href="">Contact Us</a>
             </div>
         </div>
+    </header> -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/images/MindFi-Logo.png" height="50" alt="MindFi Logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto"> <!-- ms-auto for right alignment -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Solution</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Clients</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Insights</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Press</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
+
 
     <div class="banner">
         <div class="banner-left">
@@ -252,13 +287,13 @@
         </div>
     </section>
     <footer>
-        <div class="container">
-            <div class="footer-row py-3">
+        <div >
+            <div class="footer-row  py-3">
                 <div class=" footer d-flex justify-content-center">
-                    <div class="col-lg-4 col-sm-12">
-                        <img src="./assets/images/MindFi-Logo.png" height="20%">
+                    <div class="col-lg-4 col-sm-12  mb-3 mb-lg-0 custom-div">
+                        <img src="./assets/images/MindFi-Logo.png" height="100%">
                     </div>
-                    <div class="col-lg-4 ">
+                    <div class="col-lg-4 mb-3 mb-lg-0">
                         <ul class="footer-menu d-flex">
                             <li>Home</li>
                             <li>About Us</li>
