--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </header>
 
 
-    <div class="banner">
+    <!-- <div class="banner">
         <div class="banner-left">
             <h1>About MindFi</h1>
             <p>The story and team behind the app<br>
@@ -73,6 +73,19 @@
         </div>
         <div class="banner-right">
             <img src="./assets/images/banner img.webp" alt=" banner">
+        </div>
+    </div> -->
+
+    <div class="heads my-5"> <!-- Bootstrap container for spacing -->
+        <div class="row align-items-center"> <!-- Bootstrap row with vertical alignment -->
+            <div class="col-md-6"> <!-- Left column takes 6 columns on medium and larger screens -->
+                <h1>About MindFi</h1>
+                <p>The story and team behind the app<br>
+                    that helps busy minds be mindful.</p>
+            </div>
+            <div class="col-md-6"> <!-- Right column takes 6 columns on medium and larger screens -->
+                <img src="./assets/images/banner img.webp" alt="Banner" class="img-fluid"> <!-- Responsive image -->
+            </div>
         </div>
     </div>
 
