--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer> 
         <div >
             <div class="footer-row mt-5  py-3">
                 <div class=" footer d-flex justify-content-center">
@@ -178,7 +178,7 @@
                         <img src="./assets/images/MindFi-Logo.png" height="100%">
                     </div>
                     <div class="col-lg-4 mb-3 mb-lg-0">
-                        <ul class="footer-menu d-flex">
+                        <ul class="footer-menu d-flex flex-wrap">
                             <li>Home</li>
                             <li>About Us</li>
                             <li> Our Solution </li>
