--- a/index.html
+++ b/index.html
@@ -11,42 +11,21 @@
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script>
+        // JavaScript to load the navbar dynamically
+        window.onload = function() {
+          fetch('navbar.html')
+            .then(response => response.text())
+            .then(data => {
+              document.getElementById('navbar').innerHTML = data;
+            });
+        };
+      </script>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid" style="background-color: transparent;">
-                <a class="navbar-brand" href="#">
-                    <img src="./assets/images/MindFi-Logo.png" height="50" alt="MindFi Logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto"> <!-- ms-auto for right alignment -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Solution</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Clients</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Insights</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Press</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <div id="navbar"></div>
     </header>
 
     <div class="heads my-5"> <!-- Bootstrap container for spacing -->
